operator/pkg/gateway-api/testdata/gateway/listenerset-gateway-parent-section-name-not-found/input/listenerset-gateway-parent-section-name-not-found.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-section-name
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  allowedListeners:
    namespaces:
      from: Same
  listeners:
    - name: gw-listener
      port: 80
      protocol: HTTP
      hostname: gw-section.com
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: listenerset-section-name
  namespace: gateway-conformance-infra
spec:
  parentRef:
    name: gateway-section-name
    namespace: gateway-conformance-infra
  listeners:
    - name: ls-only-listener
      port: 8080
      protocol: HTTP
      hostname: ls-section-name.com
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-via-listenerset
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: listenerset-section-name
      namespace: gateway-conformance-infra
      sectionName: ls-only-listener
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-via-gateway
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-section-name
      namespace: gateway-conformance-infra
      sectionName: ls-only-listener
  rules:
    - backendRefs:
        - name: infra-backend-v2
          port: 8080
